WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250119
Copying text on a GitHub pull request in split mode sometimes lowercases the first letter
https://bugs.webkit.org/show_bug.cgi?id=250119
Summary
Copying text on a GitHub pull request in split mode sometimes lowercases the ...
Wenson Hsieh
Reported
2023-01-04 20:18:52 PST
To reproduce: 1. Copy "ResizeObserver::create" in
https://github.com/WebKit/WebKit/pull/7829/files?diff=split&w=0
2. Paste anywhere. Expected: pastes as "ResizeObserver::create" Observed: pastes as "resizeObserver::create"
Attachments
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2023-01-05 17:54:56 PST
I wasn't able to reproduce this. There are three instances of this string on the page, and I tried all of them.
Alexey Proskuryakov
Comment 2
2023-01-05 17:56:56 PST
Also, how would this even be possible?..
Radar WebKit Bug Importer
Comment 3
2023-01-11 20:19:16 PST
<
rdar://problem/104152606
>
Wenson Hsieh
Comment 4
2023-03-09 16:13:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/11335
Alexey Proskuryakov
Comment 5
2023-03-09 16:16:59 PST
rdar://105603708
EWS
Comment 6
2023-03-10 11:37:54 PST
Committed
261516@main
(cb882e942695): <
https://commits.webkit.org/261516@main
> Reviewed commits have been landed. Closing PR #11335 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug