Cherry-pick 261516@main (cb882e942695). https://bugs.webkit.org/show_bug.cgi?id=250119

Copying text on a GitHub pull request in split mode sometimes lowercases the first letter
    https://bugs.webkit.org/show_bug.cgi?id=250119
    rdar://105603708

    Reviewed by Aditya Keerthi.

    When running lookalike character sanitization upon pasting text, allow the original text to pass
    through unchanged in the case where lookalike character sanitization didn't adjust the URL.

    Test: editing/pasteboard/copy-paste-text-with-trailing-colon.html

    * LayoutTests/editing/pasteboard/copy-paste-text-with-trailing-colon-expected.txt: Added.
    * LayoutTests/editing/pasteboard/copy-paste-text-with-trailing-colon.html: Added.
    * LayoutTests/platform/ios-wk2/TestExpectations:

    Mark the test as failing on iOS for now, while I investigate a fix in <https://webkit.org/b/253708>.

    * Source/WebCore/page/Page.cpp:
    (WebCore::Page::sanitizeLookalikeCharacters const):

    Canonical link: https://commits.webkit.org/261516@main